8297118: Change IncompatibleClassChangeError to MatchException for exhaustive switch statements and switch expressions
Reviewed-by: vromero